--- a/PMSCRM/Views/Area/AddArea.cshtml
+++ b/PMSCRM/Views/Area/AddArea.cshtml
@@ -10,7 +10,7 @@
     <form class="was-validated" asp-controller="Area" asp-action="AddArea" method="post">
 
     <div class="mb-3">
-        <input type="text" class="form-control" id="areaName" placeholder="Area Name" name="Name" required>
+            <input type="text" class="form-control" id="areaName" placeholder="Area Name" maxlength="50" name="Name" required>
         <div class="valid-feedback">Valid.</div>
         <div class="invalid-feedback">Please fill out this field.</div>
     </div>
