--- a/PMSCRM/Views/Customer/AddCustomer.cshtml
+++ b/PMSCRM/Views/Customer/AddCustomer.cshtml
@@ -8,43 +8,43 @@
 <form class="was-validated" asp-controller="Customer" asp-action="AddCustomer" method="post">
 
     <div class="mb-3">
-        <input type="text" class="form-control" id="customerName" placeholder="Customer Name" name="Name" required>
+        <input type="text" class="form-control" id="customerName" placeholder="Customer Name" maxlength="100" name="Name" required>
         <div class="valid-feedback">Valid.</div>
         <div class="invalid-feedback">Please fill out this field.</div>
     </div>
     <div class="mb-3">
-        <input type="text" class="form-control" id="phoneNumber" placeholder="Phone Number" name="PhoneNumber" required>
+            <input type="text" class="form-control" id="phoneNumber" placeholder="Phone Number" maxlength="100" name="PhoneNumber" required>
         <div class="valid-feedback">Valid.</div>
         <div class="invalid-feedback">Please fill out this field.</div>
     </div>
     <div class="mb-3">
-        <input type="text" class="form-control" id="emailAddress" placeholder="Email" name="EmailAddress" required>
+            <input type="text" class="form-control" id="emailAddress" placeholder="Email" maxlength="100" name="EmailAddress" required>
         <div class="valid-feedback">Valid.</div>
         <div class="invalid-feedback">Please fill out this field.</div>
     </div>
     <div class="mb-3">
-        <input type="text" class="form-control" id="streetAddress" placeholder="Street Address" name="StreetAddress" required>
+            <input type="text" class="form-control" id="streetAddress" placeholder="Street Address" maxlength="100" name="StreetAddress" required>
         <div class="valid-feedback">Valid.</div>
         <div class="invalid-feedback">Please fill out this field.</div>
     </div>
     <div class="mb-3">
-        <input type="text" class="form-control" id="city" placeholder="City" name="City" required>
+            <input type="text" class="form-control" id="city" placeholder="City" maxlength="100" name="City" required>
         <div class="valid-feedback">Valid.</div>
         <div class="invalid-feedback">Please fill out this field.</div>
     </div>
    
     <div class="mb-3">
-        <input type="text" class="form-control" id="stateOrProvince" placeholder="State Or Province" name="StateOrProvince" required>
+            <input type="text" class="form-control" id="stateOrProvince" placeholder="State Or Province" maxlength="100" name="StateOrProvince" required>
         <div class="valid-feedback">Valid.</div>
         <div class="invalid-feedback">Please fill out this field.</div>
     </div>
     <div class="mb-3">
-        <input type="text" class="form-control" id="postalCode" placeholder="Postal Code" name="PostalCode" required>
+            <input type="text" class="form-control" id="postalCode" placeholder="Postal Code" maxlength="20" name="PostalCode" required>
         <div class="valid-feedback">Valid.</div>
         <div class="invalid-feedback">Please fill out this field.</div>
     </div>
     <div class="mb-3">
-        <input type="text" class="form-control" id="country" placeholder="Country" name="Country" required>
+            <input type="text" class="form-control" id="country" placeholder="Country" maxlength="100" name="Country" required>
         <div class="valid-feedback">Valid.</div>
         <div class="invalid-feedback">Please fill out this field.</div>
     </div>
