--- a/PMSCRM/Views/Task/AddTask.cshtml
+++ b/PMSCRM/Views/Task/AddTask.cshtml
@@ -19,7 +19,7 @@
         <div class="invalid-feedback">Please fill out this field.</div>
     </div>
 
-    <textarea name="Description" id="taskDescription" placeholder="Description" class="form-control" maxlength="255" rows="5"></textarea>
+        <textarea name="Description" id="taskDescription" placeholder="Description" class="form-control" maxlength="255" rows="5" required></textarea>
 
     <button type="submit" class="btn btn-submit mt-3">Submit</button>
 </form>
