--- a/PMSCRM/Views/User/AddUser.cshtml
+++ b/PMSCRM/Views/User/AddUser.cshtml
@@ -22,22 +22,22 @@
         </div>
 
         <div class="mb-3">
-            <input type="text" class="form-control" id="emailAddress" placeholder="Email" name="EmailAddress" required>
+            <input type="text" class="form-control" id="emailAddress" placeholder="Email" maxlength="100" name="EmailAddress" required>
             <div class="valid-feedback">Valid.</div>
             <div class="invalid-feedback">Please fill out this field.</div>
         </div>
         <div class="mb-3">
-            <input type="text" class="form-control" id="firstName" placeholder="First Name" name="FirstName" required>
+            <input type="text" class="form-control" id="firstName" placeholder="First Name" maxlength="100" name="FirstName" required>
             <div class="valid-feedback">Valid.</div>
             <div class="invalid-feedback">Please fill out this field.</div>
         </div>
         <div class="mb-3">
-            <input type="text" class="form-control" id="lastName" placeholder="Last Name" name="LastName" required>
+            <input type="text" class="form-control" id="lastName" placeholder="Last Name" maxlength="100" name="LastName" required>
             <div class="valid-feedback">Valid.</div>
             <div class="invalid-feedback">Please fill out this field.</div>
         </div>
         <div class="mb-3">
-            <input type="text" class="form-control" id="phoneNumber" placeholder="Phone Number" name="PhoneNumber" required>
+            <input type="text" class="form-control" id="phoneNumber" placeholder="Phone Number" maxlength="100" name="PhoneNumber" required>
             <div class="valid-feedback">Valid.</div>
             <div class="invalid-feedback">Please fill out this field.</div>
         </div>
