--- a/PMSCRM/Views/User/EditUser.cshtml
+++ b/PMSCRM/Views/User/EditUser.cshtml
@@ -18,28 +18,28 @@
 
         <div class="mb-3 mt-3">
             <label for="emailAddress" class="form-label">Email</label>
-            <input type="text" class="form-control" id="emailAddress" name="EmailAddress" value="@Model.EmailAddress" required>
+            <input type="text" class="form-control" id="emailAddress" name="EmailAddress" maxlength="100" value="@Model.EmailAddress" required>
             <div class="valid-feedback">Valid.</div>
             <div class="invalid-feedback">Please fill out this field.</div>
         </div>
 
         <div class="mb-3 mt-3">
             <label for="firstName" class="form-label">First Name</label>
-            <input type="text" class="form-control" id="firstName" name="FirstName" value="@Model.FirstName" required>
+            <input type="text" class="form-control" id="firstName" name="FirstName" maxlength="100" value="@Model.FirstName" required>
             <div class="valid-feedback">Valid.</div>
             <div class="invalid-feedback">Please fill out this field.</div>
         </div>
 
         <div class="mb-3 mt-3">
             <label for="lastName" class="form-label">Last Name</label>
-            <input type="text" class="form-control" id="lastName" name="LastName" value="@Model.LastName" required>
+            <input type="text" class="form-control" id="lastName" name="LastName" maxlength="100" value="@Model.LastName" required>
             <div class="valid-feedback">Valid.</div>
             <div class="invalid-feedback">Please fill out this field.</div>
         </div>
 
         <div class="mb-3 mt-3">
             <label for="phoneNumber" class="form-label">Phone Number</label>
-            <input type="text" class="form-control" id="phoneNumber" name="PhoneNumber" value="@Model.PhoneNumber" required>
+            <input type="text" class="form-control" id="phoneNumber" name="PhoneNumber" maxlength="100" value="@Model.PhoneNumber" required>
             <div class="valid-feedback">Valid.</div>
             <div class="invalid-feedback">Please fill out this field.</div>
         </div>
