--- a/PMSCRM/Views/Customer/EditCustomer.cshtml
+++ b/PMSCRM/Views/Customer/EditCustomer.cshtml
@@ -10,43 +10,43 @@
 
         <div class="mb-3">
             <label for="Name" class="form-label">Company Name</label>
-            <input type="text" class="form-control" id="Name" name="Name" value="@Model.Name" required>
+            <input type="text" class="form-control" id="Name" name="Name" maxlength="100" value="@Model.Name" required>
             <div class="invalid-feedback">Please enter a company name.</div>
         </div>
 
         <div class="mb-3">
             <label for="PhoneNumber" class="form-label">Phone Number</label>
-            <input type="text" class="form-control" id="PhoneNumber" name="PhoneNumber" value="@Model.PhoneNumber" required>
+            <input type="text" class="form-control" id="PhoneNumber" name="PhoneNumber" maxlength="100" value="@Model.PhoneNumber" required>
             <div class="invalid-feedback">Please enter a valid phone number.</div>
         </div>
 
         <div class="mb-3">
             <label for="EmailAddress" class="form-label">Email</label>
-            <input type="email" class="form-control" id="EmailAddress" name="EmailAddress" value="@Model.EmailAddress" required>
+            <input type="email" class="form-control" id="EmailAddress" name="EmailAddress" maxlength="100" value="@Model.EmailAddress" required>
             <div class="invalid-feedback">Please enter a valid email address.</div>
         </div>
 
         <div class="mb-3">
             <label for="Street" class="form-label">Street</label>
-            <input type="text" class="form-control" id="streetAddress" name="streetAddress" value="@Model.StreetAddress" required>
+            <input type="text" class="form-control" id="streetAddress" name="streetAddress" maxlength="100" value="@Model.StreetAddress" required>
             <div class="invalid-feedback">Please enter the street name.</div>
         </div>
 
         <div class="mb-3">
             <label for="StateOrProvince" class="form-label">State/Province</label>
-            <input type="text" class="form-control" id="StateOrProvince" name="StateOrProvince" value="@Model.StateOrProvince" required>
+            <input type="text" class="form-control" id="StateOrProvince" name="StateOrProvince" maxlength="100" value="@Model.StateOrProvince" required>
             <div class="invalid-feedback">Please enter the state or province.</div>
         </div>
 
         <div class="mb-3">
             <label for="PostalCode" class="form-label">Postal Code</label>
-            <input type="text" class="form-control" id="PostalCode" name="PostalCode" value="@Model.PostalCode" required>
+            <input type="text" class="form-control" id="PostalCode" name="PostalCode" maxlength="20" value="@Model.PostalCode" required>
             <div class="invalid-feedback">Please enter a valid postal code.</div>
         </div>
 
         <div class="mb-3">
             <label for="Country" class="form-label">Country</label>
-            <input type="text" class="form-control" id="Country" name="Country" value="@Model.Country" required>
+            <input type="text" class="form-control" id="Country" name="Country" maxlength="100" value="@Model.Country" required>
             <div class="invalid-feedback">Please enter a valid country name.</div>
         </div>
 
