--- a/PMSCRM/Views/Shared/_Layout.cshtml
+++ b/PMSCRM/Views/Shared/_Layout.cshtml
@@ -56,24 +56,9 @@
                 @if (User.IsInRole("Admin"))
                 {
                     <li class="sidebar-item">
-                        <a href="#" class="sidebar-link collapsed has-dropdown" data-bs-toggle="collapse" data-bs-target="#task" aria-expanded="false" aria-controls="task">
-                            <i class="lni lni-agenda"></i>
-                            <span>Task</span>
-                        </a>
-                        <ul id="task" class="sidebar-dropdown list-unstyled collapse" data-bs-parent="#sidebar">
-                            <li class="sidebar-item">
-                                <a asp-controller="Task" asp-action="AddTask" class="sidebar-link">Add Task</a>
-                            </li>
-                            <li class="sidebar-item">
-                                <a asp-controller="Task" asp-action="ViewTasks" class="sidebar-link">View Tasks</a>
-                            </li>
-                        </ul>
-                    </li>
-
-                    <li class="sidebar-item">
                         <a href="#" class="sidebar-link collapsed has-dropdown" data-bs-toggle="collapse" data-bs-target="#area" aria-expanded="false" aria-controls="area">
                             <i class="lni lni-network"></i>
-                            <span>Area</span>
+                            <span>Areas</span>
                         </a>
                         <ul id="area" class="sidebar-dropdown list-unstyled collapse" data-bs-parent="#sidebar">
                             <li class="sidebar-item">
@@ -81,6 +66,36 @@
                             </li>
                             <li class="sidebar-item">
                                 <a asp-controller="Area" asp-action="ViewAreas" class="sidebar-link">View Areas</a>
+                            </li>
+                        </ul>
+                    </li>
+
+                    <li class="sidebar-item">
+                        <a href="#" class="sidebar-link collapsed has-dropdown" data-bs-toggle="collapse" data-bs-target="#process" aria-expanded="false" aria-controls="process">
+                            <i class="lni lni-spinner-solid"></i>
+                            <span>Processes</span>
+                        </a>
+                        <ul id="process" class="sidebar-dropdown list-unstyled collapse" data-bs-parent="#sidebar">
+                            <li class="sidebar-item">
+                                <a asp-controller="Process" asp-action="AddProcess" class="sidebar-link">Add Process</a>
+                            </li>
+                            <li class="sidebar-item">
+                                <a asp-controller="Process" asp-action="ViewProcesses" class="sidebar-link">View Processes</a>
+                            </li>
+                        </ul>
+                    </li>
+
+                    <li class="sidebar-item">
+                        <a href="#" class="sidebar-link collapsed has-dropdown" data-bs-toggle="collapse" data-bs-target="#task" aria-expanded="false" aria-controls="task">
+                            <i class="lni lni-agenda"></i>
+                            <span>Tasks</span>
+                        </a>
+                        <ul id="task" class="sidebar-dropdown list-unstyled collapse" data-bs-parent="#sidebar">
+                            <li class="sidebar-item">
+                                <a asp-controller="Task" asp-action="AddTask" class="sidebar-link">Add Task</a>
+                            </li>
+                            <li class="sidebar-item">
+                                <a asp-controller="Task" asp-action="ViewTasks" class="sidebar-link">View Tasks</a>
                             </li>
                         </ul>
                     </li>
@@ -115,20 +130,7 @@
                         </ul>
                     </li> *@
 
-                    <li class="sidebar-item">
-                        <a href="#" class="sidebar-link collapsed has-dropdown" data-bs-toggle="collapse" data-bs-target="#process" aria-expanded="false" aria-controls="process">
-                            <i class="lni lni-spinner-solid"></i>
-                            <span>Processes</span>
-                        </a>
-                        <ul id="process" class="sidebar-dropdown list-unstyled collapse" data-bs-parent="#sidebar">
-                            <li class="sidebar-item">
-                                <a asp-controller="Process" asp-action="AddProcess" class="sidebar-link">Add Process</a>
-                            </li>
-                            <li class="sidebar-item">
-                                <a asp-controller="Process" asp-action="ViewProcesses" class="sidebar-link">View Processes</a>
-                            </li>
-                        </ul>
-                    </li>
+
 
                   @*   <li class="sidebar-item">
                         <a href="#" class="sidebar-link collapsed has-dropdown" data-bs-toggle="collapse" data-bs-target="#role" aria-expanded="false" aria-controls="role">
@@ -163,7 +165,7 @@
                     <li class="sidebar-item">
                         <a href="#" class="sidebar-link collapsed has-dropdown" data-bs-toggle="collapse" data-bs-target="#taskProcessArea" aria-expanded="false" aria-controls="taskProcessArea">
                             <i class="lni lni-users"></i>
-                            <span>TaskProcessArea</span>
+                            <span>TaskProcessAreas</span>
                         </a>
                         <ul id="taskProcessArea" class="sidebar-dropdown list-unstyled collapse" data-bs-parent="#sidebar">
                             <li class="sidebar-item">
@@ -178,7 +180,7 @@
                     <li class="sidebar-item">
                         <a href="#" class="sidebar-link collapsed has-dropdown" data-bs-toggle="collapse" data-bs-target="#taskProcessAreaUserCustomer" aria-expanded="false" aria-controls="taskProcessAreaUserCustomer">
                                 <i class="lni lni-users"></i>
-                            <span>TaskProcessAreaUserCustomer</span>
+                            <span>TaskProcessAreaUserCustomers</span>
                             </a>
                         <ul id="taskProcessAreaUserCustomer" class="sidebar-dropdown list-unstyled collapse" data-bs-parent="#sidebar">
                                 <li class="sidebar-item">
