--- a/PMSCRM/Views/Area/ViewAreas.cshtml
+++ b/PMSCRM/Views/Area/ViewAreas.cshtml
@@ -56,6 +56,9 @@
                         <td class="text-truncate" style="max-width: 300px;">
                             <a href="/Area/Details/@area.AreaId" style="color: black; text-decoration: none;">@area.Description</a>
                         </td>
+                        <td class="text-truncate" style="max-width: 100px;">
+                            <a href="/Area/Details/@area.AreaId" style="color: black; text-decoration: none;">@area.Timestamp</a>
+                        </td>
                         <td class="text-end">
                             <a href="/Area/EditArea/@area.AreaId" class="btn btn-edit">Edit</a>
                             <a href="/Area/DeleteArea/@area.AreaId" class="btn btn-delete">Delete</a>
