--- a/PMSCRM/Views/Customer/ViewCustomers.cshtml
+++ b/PMSCRM/Views/Customer/ViewCustomers.cshtml
@@ -58,6 +58,10 @@
                         <td class="text-truncate" style="max-width: 300px;">
                             <a href="/Customer/Details/@customer.CustomerId" style="color: black; text-decoration: none;">@customer.PhoneNumber</a>
                         </td>
+                        <td class="text-truncate" style="max-width: 100px;">
+                            <a href="/Customer/Details/@customer.CustomerId" style="color: black; text-decoration: none;">@customer.Timestamp</a>
+                        </td>
+
                         <td>
                             <a href="/Customer/EditCustomer/@customer.CustomerId" class="btn btn-edit">Edit</a>
                             <a href="/Customer/DeleteCustomer/@customer.CustomerId" class="btn btn-delete">Delete</a>
