--- a/PMSCRM/Views/Process/ViewProcesses.cshtml
+++ b/PMSCRM/Views/Process/ViewProcesses.cshtml
@@ -88,8 +88,10 @@
                         <td class="text-truncate" style="max-width: 300px;">
                             <a href="/Process/Details/@process.ProcessId" style="color: black; text-decoration: none;">@process.Description</a>
                         </td>
-                        <td>@process.Timestamp</td>
-                        <td class="text-end">
+                        <td class="text-truncate" style="max-width: 300px;">
+                            <a href="/Process/Details/@process.ProcessId" style="color: black; text-decoration: none;">@process.Timestamp</a>
+                        </td>
+                       
 
                         <td>
                             <a href="/Process/EditProcess/@process.ProcessId" class="btn btn-edit">Edit</a>
