--- a/PMSCRM/Views/Process/AddProcess.cshtml
+++ b/PMSCRM/Views/Process/AddProcess.cshtml
@@ -33,7 +33,7 @@
 
         <div class="mb-3">
             <label for="Name" class="form-label">Description</label>
-            <textarea asp-for="Process.Description" class="form-control" maxlength="255" rows="5" placeholder="Add a Description"></textarea>
+            <textarea asp-for="Process.Description" class="form-control" maxlength="255" rows="5" placeholder="Add a Description" required></textarea>
         </div>
 
         <button type="submit" class="btn btn-submit">@(ViewBag.IsEditMode ? "Save Changes" : "Submit")</button>
