--- a/PMSCRM/Views/Task/ViewTasks.cshtml
+++ b/PMSCRM/Views/Task/ViewTasks.cshtml
@@ -71,8 +71,9 @@
                         <td>
                             <a href="/Task/Details/@task.TaskId" style="color: black; text-decoration: none;">@task.Duration</a>
                         </td>
-                        <td>@task.Duration</td>
-                        <td>@task.Timestamp</td>
+                        <td>
+                            <a href="/Task/Details/@task.TaskId" style="color: black; text-decoration: none;">@task.Timestamp</a>
+                        </td>
                         <td>
                             <a href="/Task/EditTask/@task.TaskId" class="btn btn-edit">Edit</a>
                             <a href="/Task/DeleteTask/@task.TaskId" class="btn btn-delete">Delete</a>
