--- a/PMSCRM/Views/Customer/ViewCustomers.cshtml
+++ b/PMSCRM/Views/Customer/ViewCustomers.cshtml
@@ -42,7 +42,7 @@
                             }
                         </a>
                     </th>
-                    <th></th>
+                    <th class="text-end px-3"></th>
                 </tr>
             </thead>
             <tbody>
@@ -62,7 +62,7 @@
                             <a href="/Customer/Details/@customer.CustomerId" style="color: black; text-decoration: none;">@customer.Timestamp</a>
                         </td>
 
-                        <td>
+                        <td class="text-end">
                             <a href="/Customer/EditCustomer/@customer.CustomerId" class="btn btn-edit">Edit</a>
                             <a href="/Customer/DeleteCustomer/@customer.CustomerId" class="btn btn-delete">Delete</a>
                         </td>
