--- a/PMSCRM/Views/Process/ViewProcesses.cshtml
+++ b/PMSCRM/Views/Process/ViewProcesses.cshtml
@@ -91,9 +91,9 @@
                         <td class="text-truncate" style="max-width: 300px;">
                             <a href="/Process/Details/@process.ProcessId" style="color: black; text-decoration: none;">@process.Timestamp</a>
                         </td>
-                       
 
-                        <td>
+
+                        <td class="text-end">
                             <a href="/Process/EditProcess/@process.ProcessId" class="btn btn-edit">Edit</a>
                             <a href="/Process/DeleteProcess/@process.ProcessId" class="btn btn-delete">Delete</a>
                         </td>
