--- a/PMSCRM/Views/Task/ViewTasks.cshtml
+++ b/PMSCRM/Views/Task/ViewTasks.cshtml
@@ -55,7 +55,7 @@
                             }
                         </a>
                     </th>
-                    <th></th>
+                    <th class="text-end px-3"></th>
                 </tr>
             </thead>
             <tbody>
@@ -74,7 +74,7 @@
                         <td>
                             <a href="/Task/Details/@task.TaskId" style="color: black; text-decoration: none;">@task.Timestamp</a>
                         </td>
-                        <td>
+                        <td class="text-end">
                             <a href="/Task/EditTask/@task.TaskId" class="btn btn-edit">Edit</a>
                             <a href="/Task/DeleteTask/@task.TaskId" class="btn btn-delete">Delete</a>
                         </td>
