--- a/PMSCRM/Views/TaskProcessArea/ViewTaskProcessAreas.cshtml
+++ b/PMSCRM/Views/TaskProcessArea/ViewTaskProcessAreas.cshtml
@@ -76,7 +76,7 @@
                         }
                     </a>
                 </th>
-                <th></th>
+                <th class="text-end px-3"></th>
             </tr>
         </thead>
         <tbody>
@@ -100,7 +100,7 @@
                     </td>
 
 
-                    <td>
+                    <td class="text-end">
                         <a href="@Url.Action("EditTaskProcessArea", "TaskProcessArea", new { id = item.TaskProcessAreaId })" class="btn btn-edit">Edit</a>
                         <a href="@Url.Action("DeleteTaskProcessArea", "TaskProcessArea", new { id = item.TaskProcessAreaId })" class="btn btn-delete">Delete</a>
                     </td>
