--- a/PMSCRM/Views/TaskProcessAreaUserCustomer/ViewTaskProcessAreaUserCustomer.cshtml
+++ b/PMSCRM/Views/TaskProcessAreaUserCustomer/ViewTaskProcessAreaUserCustomer.cshtml
@@ -133,7 +133,7 @@
                             Created
                             @if (ViewBag.CurrentSort == "Timestamp")
                             {
-                                <span>@(ViewBag.CurrentSortDirection == "asc" ? "▲" : "▼")</span>
+                                <span>@(ViewBag.CurrentSortDirection == "desc" ? "▲" : "▼")</span>
                             }
                             else
                             {
@@ -141,7 +141,7 @@
                             }
                         </a>
                     </th>
-                    <th></th>
+                    <th class="text-end px-3"></th>
                 </tr>
             </thead>
             <tbody>
@@ -186,7 +186,7 @@
                                 <a href="/TaskProcessAreaUserCustomer/Details/@item.TaskProcessAreaUserCustomerId" style="color: black; text-decoration: none;">@item.Timestamp.ToString("yyyy-MM-dd HH:mm")</a>
                             </td>
 
-                            <td>
+                            <td class="text-end">
                                 <a href="@Url.Action("EditTaskProcessAreaUserCustomer", "TaskProcessAreaUserCustomer", new { id = item.TaskProcessAreaUserCustomerId })" class="btn btn-edit">Edit</a>
                                 <a href="@Url.Action("DeleteTaskProcessAreaUserCustomer", "TaskProcessAreaUserCustomer", new { id = item.TaskProcessAreaUserCustomerId })" class="btn btn-delete">Delete</a>
                             </td>
