--- a/PMSCRM/Views/TaskProcessArea/ViewTaskProcessAreas.cshtml
+++ b/PMSCRM/Views/TaskProcessArea/ViewTaskProcessAreas.cshtml
@@ -33,7 +33,7 @@
                         }
                         else
                         {
-                            <span>▲</span> <!-- Default arrow for ascending -->
+                            <span>▲</span> 
                         }
                     </a>
                 </th>
