--- a/PMSCRM/Views/Process/DeleteProcess.cshtml
+++ b/PMSCRM/Views/Process/DeleteProcess.cshtml
@@ -7,6 +7,12 @@
 <link rel="stylesheet" href="~/css/buttons.css">
 
 <div class="card shadow-sm p-4 mb-4">
+    @if (ViewBag.Message != null)
+    {
+        <div class="alert alert-info">
+            @ViewBag.Message
+        </div>
+    }
     <div class="alert alert-danger">
         <h4>Are you sure you want to delete this process?</h4>
         <p><strong>Name:</strong> @Model.Name</p>
